<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/fourSpaces">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_producer"
            android:id="@+id/btn_new_producer"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_producers"
            android:id="@+id/btn_all_producers"/>

        <Button
            android:id="@+id/btn_nuevo_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Nuevo_Material"
            android:text="@string/new_material" />

        <Button
            android:id="@+id/btn_listar_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listar_Material"
            android:text="Listar Material" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>