<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProducersEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fourSpaces">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_producer"
            android:padding="@dimen/threeSpaces"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/contract"
                android:layout_weight="1"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="0dp"
                android:id="@+id/edit_contra"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_weight="1"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/edit_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:layout_weight="1"
                android:textAlignment="textEnd"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/season_spinner2"
                android:layout_weight="4"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:gravity="right"
            android:paddingTop="@dimen/threeSpaces">

            <Button
                android:id="@+id/btn_edit_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="cerrar"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_editar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="guardar_edit"
                android:text="@string/save" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:gravity="left"
            android:paddingTop="@dimen/threeSpaces">

            <Button
                android:id="@+id/btn_borrar_producto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="borrar_producto"
                android:text="Borrar" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>