<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaterialsFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fourSpaces">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_material"
            android:padding="@dimen/threeSpaces"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:layout_weight="1"
                android:textAlignment="textEnd"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/season_spinner2"
                android:layout_weight="4"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:layout_weight="1"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/edit_code"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/line"
                android:layout_weight="1"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/edit_line"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_weight="1"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_description"
                android:layout_weight="4"
                android:lines="4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:layout_weight="1"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_unit"
                android:layout_weight="4" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:layout_weight="1"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/edit_stock"
                android:inputType="number"/>
        </LinearLayout>



            <Button
                android:id="@+id/btn_save_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Guardar" />

            <Button
                android:id="@+id/btn_cancel_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancelar" />



    </LinearLayout>



</android.support.constraint.ConstraintLayout>